review methods, update
