# src/db/controllers/driversController.js
@@ -1,4 +1,5 @@
 const Drivers = require('../models/driversModels');
+const errorController = require('./errorController');
 
 const createDriver = (req, res) => {
   const body = req.body
@@ -9,7 +10,8 @@ const createDriver = (req, res) => {
     })
     .catch(err => {
       if (err) {
-        res.status(500).json(err);
+        const error = errorController(err);
+        res.status(error.status).json(error.err);
       }
     })
 };
@@ -27,7 +29,7 @@ const getAllDriver = (req, res) => {
 };
 
 const getDriverById = (req, res) => {
-  Drivers.findById(req.body.driverId)
+  Drivers.findById(req.params.driverId)
     .then(driver =>  {
       res.status(200).json(driver);
     })
@@ -50,12 +52,12 @@ const updateDriver = (req, res) => {
 
 const deleteDriver = (req, res) => {
   Drivers.findByIdAndDelete(req.params.driverId)
-    .then(driver => {
-      res.json(driver);
+    .then(() => {
+      res.status(200).json('Driver has been deleted');
     })
     .catch(err => {
       if (err) {
-        res.status(500).json(err);
+        errorController(err)
       } 
     })
 };
